# pyspark_applications

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
pyspark_applications/etl/crm_analytics/: __init__.py  __main__.py
pyspark_applications/etl/hps_goldilocks/: __init__.py  __main__.py
pyspark_applications/etl/word_count/: __init__.py  __main__.py
test/: conftest.py  test_crm_analytics.py  test_hps_goldilocks.py  test_word_count.py
test/data/: goldilocks.csv  word_count.txt
