[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspark_applications"
version = "0.0.1"
authors = [
  { name="Gabriel Peredo", email="gabriel.peredo@gmail.com" },
]

[tool.isort]
profile = "black"

[tool.setuptools]
packages = [
    "pyspark_applications",
    "pyspark_applications.etl",
    "pyspark_applications.etl.crm_analytics",
    "pyspark_applications.etl.hps_goldilocks",
    "pyspark_applications.etl.word_count",
]
